fix(webui): sidebar toggler not showing up on small screens (#2053)
Closes #2049

Reviewed-on: https://onlyg.it/OpenWF/SpaceNinjaServer/pulls/2053
Co-committed-by: Sainan <63328889+Sainan@users.noreply.github.com>

--- a/static/webui/style.css
+++ b/static/webui/style.css
@@ -29,3 +29,13 @@ td.text-end > a > svg {
 .card-body {
     overflow: auto;
 }
+
+/* fixes for navbar on small resolutions due to not being navbar-expand */
+.navbar.sticky-top .navbar-nav {
+    flex-direction: row;
+}
+
+.dropdown-toggle {
+    padding-right: var(--bs-navbar-nav-link-padding-x);
+    padding-left: var(--bs-navbar-nav-link-padding-x);
+}
